# find-fel-nzbdav

./: .gitignore  README.md  find-fel-nzbdav  pool.yaml.example  pyproject.toml
data/: dv_bluray_com_en_5.11.26.txt
docs/superpowers/plans/: 2026-05-22-bluray-com-catalog.md
docs/superpowers/specs/: 2026-05-22-bluray-com-catalog-design.md
scripts/: clean_find_fel_db.py  pull_from_bluray_com.sh  sample_pool_mkvs.py
src/: bluray_com.py  catalog.py  cli.py  config.py  db.py  httpclient.py  hydra.py  nzbdav.py  parallel.py  probe.py  workflow.py
src/find_fel_nzbdav/: __init__.py  bluray_com.py  catalog.py  cli.py  config.py  http.py  hydra.py  models.py  probe.py  webdav.py  workflow.py
tests/: test_bluray_com.py  test_catalog.py  test_clean_find_fel_db.py  test_cli.py  test_config.py  test_db.py  test_http.py  test_hydra.py  test_models.py  test_nzbdav.py  test_parallel.py  test_probe.py  test_sample_pool_mkvs.py  test_webdav.py  test_workflow.py
