[project]
name = "find-fel-nzbdav"
version = "0.1.0"
description = "Check NZBDAV/Hydra candidates for Dolby Vision Profile 7 FEL."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
]

[project.scripts]
find-fel-nzbdav = "cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "bluray_com",
    "catalog",
    "cli",
    "config",
    "httpclient",
    "hydra",
    "models",
    "nzbdav",
    "probe",
    "webdav",
    "workflow",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
